Tests/Error/InHandler/.build/throwwithbadhandler.pr
{
  "name": "ThrowWithBadHandler",
  "description": "Calls ThrowOriginal; if it throws, calls BadHandler. Handler is specified as null/omitted.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "call ThrowOriginal, on error call BadHandler",
      "lineNumber": 3,
      "indent": 0,
      "comment": "calls a goal that throws, handler also throws",
      "actions": [
        {
          "module": "goal",
          "action": "call",
          "parameters": [
            {
              "name": "GoalName",
              "value": {
                "Name": "ThrowOriginal",
                "Description": null,
                "Parallel": false,
                "Parameters": null,
                "PrPath": "/.build/throworiginal.pr"
              },
              "type": "goal.call"
            },
            {
              "name": "Actor",
              "value": "this?(user|service|system)",
              "type": "actor"
            }
          ],
          "defaults": null,
          "modifiers": [
            {
              "module": "error",
              "action": "handle",
              "parameters": [
                {
                  "name": "Goal",
                  "value": {
                    "Name": "BadHandler",
                    "Description": null,
                    "Parallel": false,
                    "Parameters": null,
                    "PrPath": "/.build/badhandler.pr"
                  },
                  "type": "goal.call"
                },
                {
                  "name": "IgnoreError",
                  "value": false,
                  "type": "bool"
                }
              ],
              "defaults": null,
              "modifiers": []
            }
          ]
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Error/InHandler/ThrowWithBadHandler.goal",
  "prPath": "/Error/InHandler/.build/throwwithbadhandler.pr",
  "hash": "010dce8d9abce373be533dc95dd11a5dabefdaf8f05787372c28dd8580f1cee7",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}